
  o FEATURE: Multi-select on reading coordinates is enabled.

  o CHANGE: partial charges added to electrostatic surface calculation.

  o CHANGE: shift-click and ctrl-click in the file selectors now work
    for reading in several coordinates files [Roberto Steiner].

  o CHANGE: SEGIDs are more intelligently inherited [Steven Sheriff,
    Bob Nolte]

  o CHANGE: Pukka-puckers? fixed and re-enabled.

  o CHANGE: Ramachandran Plots now have molecule name labels [Wendy Offen].

  o CHANGE: The save coordinates dialogs active item is the first
    molecule with unsaved changes (rather than simply the first
    molecule) [Herb Klei]

  o CHANGE: "Go To Blob" now goes to the front blob, no matter what
    the density level of blobs/density behind it is [JED].

  o CHANGE: Don't display the geometry distance if the molecule
    corresponding to the start or end point is not displayed [JED].

  o CHANGE: Chi angles rotation now include a "reverse fragment" option.

  o BUG-FIX: TER records are removed on addition of waters [Herb Klei].

  o BUG-FIX: Single HETATMs now are refined by rigid body (as waters
    are) when using Refine Zone.

  o BUG-FIX: new atoms (and waters) are added as HETATMs if
    appropriate [David Mathog].

  o BUG-FIX: TER records for water chains are no longer tested in
    water validation tests [Herb Klei].

  o BUG-FIX: NCS chain jumping now works on heterodimers [Jianghai Zhu].

  o BUG-FIX: The Chain Reordering function in Extensions has been fixed.

  o BUG-FIX: Torsion angle refinement convergence improved [JED].

  o BUG-FIX: Limit the sequence view canvas X parameters, so that we
    don't get X11 errors and crash [Felix Frolow].


-----

Release 0.5.2 Uneno

   o BUG-FIX: Fix annoying shift-key-labels-atoms bug

Release 0.5.1 Uneno

   o FEATURE: A "Delete Molecule" button is now available in the
     Display Manager [TJS].

   o FEATURE: show-rotamer-dialog is now available from the scripting