@@ -42,6 +42,12 @@ Pre-release 0.6
   o CHANGE: SEGIDs are more intelligently inherited [Steven Sheriff,
     Bob Nolte]
 
+  o CHANGE: Transformed maps take on the cell and spacegroup of the
+    reference coordinates.
+
+  o CHANGE: Coordinates Molecules transformed by LSQ take on the cell
+    and spacegroup of the reference coordinates.
+
   o CHANGE: Pukka-puckers? fixed and re-enabled.
 
   o CHANGE: Ramachandran Plots now have molecule name labels [Wendy Offen].
